poprawki frontendu (zmiana na polskie słowa) dodanie wyswietlania poprawnego tlumaczenia usuwanie sentencji i tlumaczenia po przejsciu dalej

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,8 +11,10 @@
     <div id="random-polish-word"></div>
     <input type="text" id="english-word" placeholder="Wpisz tłumaczenie">
     <button id="submit-btn">Sprawdź</button>
-    <button id="next-word-btn">Next Word</button>
+    <button id="next-word-btn">Następne słowo</button>
     <div id="result"></div>
+    <br>
+    <div id="translation"></div>
     <div>Angielski opis słowa: </div>
     <br>
     <div id="sentenceA1"></div>
