--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -1,57 +1,39 @@
 body {
-    font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
+    font-family: 'Helvetica Neue', Arial, sans-serif;
     margin: 0;
+    padding: 0;
+    background-color: #f4f4f4;
+    text-align: center;
 }
 
-/* Nowy główny kontener, który wyśrodkuje wszystko pionowo i poziomo */
 .main-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    width: 100%;
-}
-
-/* Każda sekcja w bloku */
-.section {
-    display: block;
-    margin-bottom: 20px; /* Odstęp między sekcjami */
     padding: 20px;
-    width: 100%;
-    max-width: 600px;
-    background-color: white;
-    border-radius: 8px;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
 }
 
-/* Sekcja przycisków */
+.section {
+    margin: 0 auto 20px auto;
+    padding: 20px;
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    max-width: 600px;
+    background-image: url('background.jpg');
+    background-size: cover;
+    background-position: center;
+}
+
 .section:first-child {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
-    gap: 10px;
-}
-
-.container {
-    display: flex;
-    flex-direction: column;
     align-items: center;
-}
-
-input[type="text"] {
-    padding: 10px;
-    font-size: 18px;
-    width: 100%;
-    margin-bottom: 20px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
 }
 
 button {
+    margin: 5px;
     padding: 10px 20px;
-    font-size: 16px;
-    background-color: #007BFF;
-    color: white;
+    background-color: #007bff;
+    color: #fff;
     border: none;
     border-radius: 4px;
     cursor: pointer;
@@ -59,4 +41,21 @@ button {
 
 button:hover {
     background-color: #0056b3;
+}
+
+#username {
+    font-weight: bold;
+    margin-left: 10px;
+}
+
+input[type="text"] {
+    padding: 10px;
+    margin: 10px 0;
+    width: calc(100% - 22px);
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+#result, #translation, #sentenceA1, #sentenceHigher {
+    margin-top: 10px;
 }
